# arxiv-indexor-webservice

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  arxiv.db  pyproject.toml
arxiv_indexor/: __init__.py  __main__.py  classifier.py  db.py  feed.py  mailer.py  web.py
arxiv_indexor/templates/: index.html
docs/: architecture.md  classification.md  commands.md  database.md  token-optimization-2026-04-05.md
